# google-play-scraper

./: .gitignore  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: push_pr_hook.yml  pythonpackage.yml  scheduled_e2e_test.yml
google_play_scraper/: __init__.py  exceptions.py
google_play_scraper/constants/: element.py  extraction.py  google_play.py  regex.py  request.py  url.py
google_play_scraper/features/: app.py  collection.py  data_safety.py  developer.py  permissions.py  reviews.py  search.py
google_play_scraper/utils/: __init__.py  data_processors.py  proxies.py  request.py
tests/: test_app.py
tests/e2e_tests/: test_app.py  test_collection.py  test_data_safety.py  test_developer.py  test_permissions.py  test_reviews.py  test_reviews_all.py  test_search.py
tests/mocks/: com.instagram.igtv.html  com__trixi__bike__stunts__driving.html
