[tool.poetry]
name = "google-play-scraper"
version = "1.2.2"
description = "Google-Play-Scraper provides APIs to easily crawl the Google Play Store for Python without any external dependencies!"
authors = ["JoMingyu <mingyu.planb@gmail.com>"]
license = "MIT"
packages = [
    { include = "google_play_scraper" }
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Programming Language :: Python",
    "Typing :: Typed",
]
readme = "README.md"
repository = "https://github.com/JoMingyu/google-play-scraper"

[tool.poetry.dependencies]
python = ">= 2.7,<3.0"
aenum = "3.1.11"

[tool.poetry.dev-dependencies]
#black = "^22.6.0"
isort = "4.3.21"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
